[package]
name = "hnu_algo"
version = "0.1.0"
edition = "2024"

[[bench]]
name = "divide_conquer_min_max"
harness = false

[[bench]]
name = "divide_conquer_sort"
harness = false

[[bench]]
name = "simple_knapsack"
harness = false

[dependencies]
jieba-rs = "0.8.1"
ndarray = "0.17.2"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"

[dev-dependencies]
criterion = "0.3"
